anna (0.056) UNRELEASED; urgency=low

  * Joey Hess
    - Add support for retreiver error handling.
    - Try to use error handling if the Packages file retrieval fails.

 -- Joey Hess <joeyh@debian.org>  Wed,  7 Apr 2004 20:50:18 -0400

anna (0.055) unstable; urgency=low

  * Updated translations: 
    - Hebrew (he.po) by Lior Kaplan
    - Indonesian (id.po) by Parlin Imanuel Toh
    - Traditional Chinese (zh_TW.po) by Tetralet

 -- Joey Hess <joeyh@debian.org>  Tue, 30 Mar 2004 14:58:35 -0500

anna (0.054) unstable; urgency=low

  * Bastian Blank
    - Use dependency resolver with kernel version support.
    - Build-Depend against libdebian-installer4 (>= 0.20).

 -- Bastian Blank <waldi@debian.org>  Sun, 21 Mar 2004 21:53:00 +0100

anna (0.053) unstable; urgency=low

  * Updated translations
    - Russian by Nikolai Prokoschenko

 -- Joey Hess <joeyh@debian.org>  Sun, 14 Mar 2004 13:30:28 -0500

anna (0.052) unstable; urgency=low

  * jfs:
    Major revision of the spanish translation fixing typos and errors in msgstrs
    (carriage returns, accents, wording...).

    Many thanks to Jose Antonio Jimenez Madrid for his revision that sparked
    many of these changes.

 -- Joey Hess <joeyh@debian.org>  Sat, 13 Mar 2004 10:25:59 -0500

anna (0.051) unstable; urgency=low

  * Matt Kraai
    - Configure packages that do not have a menu item. Closes: #232397
  * Translations
    - Ming Hua
      - Initial Traditional Chinese translation (zh_TW.po), by Tetralet
      - Updated Traditional Chinese translation (zh_TW.po), by Tetralet
    - Håvard Korsvoll
      - Updated Norwegian, nynorsk translation (nn.po).
    - Eddy Petrisor
      - Added Romanian translation (ro.po)
    - Håvard Korsvoll
      - Updated Norwegian, bokmål translation, (nb.po). From Axel Bojer
    -  Lior Kaplan
      - Update Hebrew translation (he.po)
    -  Dafydd Harries
      - Added Welsh translation (cy.po)

 -- Joey Hess <joeyh@debian.org>  Wed, 10 Mar 2004 23:40:31 -0500
