@@ -2,7 +2,11 @@ anna (0.056) UNRELEASED; urgency=low
 
   * Joey Hess
     - Add support for retreiver error handling.
-    - Try to use error handling if the Packages file retrieval fails.
+    - Try to use error handling if the Packages file retrieval fails
+      or the file is invalid.
+    - Also use it when other file retrieval fails, and when the md5sum
+      is bad.
+    - Add logging.
 
  -- Joey Hess <joeyh@debian.org>  Wed,  7 Apr 2004 20:50:18 -0400
 
